# mathscribe

./: .gitignore  CLAUDE.md  Cargo.toml  DDI-INSTRUCTIONS.md  README.md
.adr/: ADR-001.md
.githooks/: pre-commit
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: Phase-4-User-Stories.md
