[package]
name = "mathscribe-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WASM bindings for MathScribe NL→formula engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mathscribe-core = { path = "../core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
